@@ -29,7 +29,7 @@
 
   <groupId>org.mybatis</groupId>
   <artifactId>jpetstore</artifactId>
-  <version>6.4.1-SNAPSHOT</version>
+  <version>6.5.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
   <name>JPetStore Demo 6</name>
@@ -59,11 +59,11 @@
 
   <properties>
     <!-- Java Usage -->
-    <java.version>8</java.version>
-    <java.release.version>8</java.release.version>
+    <java.version>21</java.version>
+    <java.release.version>21</java.release.version>
 
     <!-- Configuration -->
-    <clirr.comparisonVersion>6.0.2</clirr.comparisonVersion>
+    <clirr.comparisonVersion>7.0.0</clirr.comparisonVersion>
     <osgi.export />
 
     <!-- Library Versions -->
@@ -71,9 +71,11 @@
     <byte-buddy.version>1.18.12</byte-buddy.version>
     <commons-logging.version>1.4.0</commons-logging.version>
     <hsqldb.version>2.7.4</hsqldb.version>
+    <jstl-api.version>3.0.2</jstl-api.version>
+    <jstl-impl.version>3.0.1</jstl-impl.version>
     <mockito.version>5.23.0</mockito.version>
     <slf4j.version>2.0.18</slf4j.version>
-    <spring.version>5.3.39</spring.version>
+    <spring.version>7.0.8</spring.version>
 
     <!-- Plugin Versions -->
     <cargo-maven3-plugin.version>1.10.28</cargo-maven3-plugin.version>
@@ -110,19 +112,13 @@
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
-      <version>2.1.2</version>
+      <version>4.1.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-jcl</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -141,26 +137,26 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.taglibs</groupId>
-      <artifactId>taglibs-standard-spec</artifactId>
-      <version>1.2.5</version>
+      <groupId>jakarta.servlet.jsp.jstl</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+      <version>${jstl-api.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.taglibs</groupId>
-      <artifactId>taglibs-standard-impl</artifactId>
-      <version>1.2.5</version>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+      <version>${jstl-impl.version}</version>
     </dependency>
 
     <dependency>
       <groupId>jakarta.servlet.jsp</groupId>
       <artifactId>jakarta.servlet.jsp-api</artifactId>
-      <version>2.3.6</version>
+      <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
-      <version>4.0.4</version>
+      <version>6.0.0</version>
       <scope>provided</scope>
     </dependency>
 
@@ -185,7 +181,6 @@
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>${hsqldb.version}</version>
-      <classifier>jdk8</classifier>
     </dependency>
 
     <!-- Test dependencies -->
@@ -328,16 +323,15 @@
 
     <!-- Profiles for Application Server (tomcat first as preferred then alpha order) -->
     <profile>
-      <id>tomcat9</id>
+      <id>tomcat11</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <tomcat.major-version>9</tomcat.major-version>
-        <tomcat.version>9.0.120</tomcat.version>
-        <cargo.maven.containerId>tomcat${tomcat.major-version}x</cargo.maven.containerId>
+        <tomcat.major-version>11.0</tomcat.major-version>
+        <tomcat.version>11.0.24</tomcat.version>
+        <cargo.maven.containerId>tomcat11x</cargo.maven.containerId>
         <cargo.maven.containerUrl>https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/${tomcat.version}/tomcat-${tomcat.version}.zip</cargo.maven.containerUrl>
-        <cargo.jvmargs>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</cargo.jvmargs>
       </properties>
       <build>
         <plugins>
@@ -359,15 +353,29 @@
     </profile>
 
     <profile>
-      <!-- Use 'payara5' as this is not supported with java 17 due to hk2 'dcs' is null error. -->
-      <id>glassfish5</id>
+      <id>glassfish8</id>
       <properties>
-        <glassfish.major-version>5</glassfish.major-version>
-        <glassfish.version>5.1.0</glassfish.version>
-        <cargo.java.home>D:/jdk/jdk-1.8.0.501</cargo.java.home>
-        <cargo.maven.containerId>glassfish${glassfish.major-version}x</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://repo.maven.apache.org/maven2/org/glassfish/main/distributions/glassfish/${glassfish.version}/glassfish-${glassfish.version}.zip</cargo.maven.containerUrl>
+        <glassfish.version>8.0.4</glassfish.version>
+        <cargo.maven.containerId>glassfish8x</cargo.maven.containerId>
+        <cargo.server.start.timeout>240000</cargo.server.start.timeout>
       </properties>
+      <dependencies>
+        <!-- GlassFish bundles its own JSTL; mark as provided to avoid a
+             duplicate TLD URI registration when Jasper scans both the server
+             lib and WEB-INF/lib. -->
+        <dependency>
+          <groupId>jakarta.servlet.jsp.jstl</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+          <version>${jstl-api.version}</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+          <version>${jstl-impl.version}</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
@@ -377,9 +385,12 @@
               <container>
                 <containerId>${cargo.maven.containerId}</containerId>
                 <type>installed</type>
-                <zipUrlInstaller>
-                  <url>${cargo.maven.containerUrl}</url>
-                </zipUrlInstaller>
+                <artifactInstaller>
+                  <groupId>org.glassfish.main.distributions</groupId>
+                  <artifactId>glassfish</artifactId>
+                  <version>${glassfish.version}</version>
+                  <type>zip</type>
+                </artifactInstaller>
               </container>
             </configuration>
           </plugin>
@@ -388,12 +399,12 @@
     </profile>
 
     <profile>
-      <id>jetty12-ee8</id>
+      <id>jetty12-ee11</id>
       <properties>
         <jetty.major-version>12</jetty.major-version>
         <jetty.version>12.1.12</jetty.version>
         <cargo.maven.containerId>jetty${jetty.major-version}x</cargo.maven.containerId>
-        <cargo.jetty.deployer.ee.version>ee8</cargo.jetty.deployer.ee.version>
+        <cargo.jetty.deployer.ee.version>ee11</cargo.jetty.deployer.ee.version>
       </properties>
       <build>
         <plugins>
@@ -417,18 +428,19 @@
     </profile>
 
     <profile>
-      <id>liberty26-ee8</id>
+      <id>liberty26-ee11</id>
       <properties>
         <liberty.version>26.0.0.8</liberty.version>
         <cargo.maven.containerId>liberty</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/com/ibm/websphere/appserver/runtime/wlp-javaee8/${liberty.version}/wlp-javaee8-${liberty.version}.zip</cargo.maven.containerUrl>
+        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/io/openliberty/openliberty-jakartaee11/${liberty.version}/openliberty-jakartaee11-${liberty.version}.zip</cargo.maven.containerUrl>
+        <cargo.server.start.timeout>240000</cargo.server.start.timeout>
       </properties>
       <dependencies>
         <!-- Due to osgi issue with mybatis spring, its required here for liberty -->
         <dependency>
           <groupId>org.springframework.batch</groupId>
           <artifactId>spring-batch-infrastructure</artifactId>
-          <version>4.3.10</version>
+          <version>6.0.4</version>
         </dependency>
       </dependencies>
       <build>
@@ -454,53 +466,32 @@
     </profile>
 
     <profile>
-      <id>payara5</id>
+      <id>payara7</id>
       <properties>
-        <payara.major-version>5</payara.major-version>
-        <payara.version>5.2022.5</payara.version>
+        <payara.version>7.2026.7</payara.version>
         <cargo.maven.containerId>payara</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://repo.maven.apache.org/maven2/fish/payara/distributions/payara/${payara.version}/payara-${payara.version}.zip</cargo.maven.containerUrl>
-        <cargo.startup.timeout>300000</cargo.startup.timeout>
+        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/fish/payara/distributions/payara/${payara.version}/payara-${payara.version}.zip</cargo.maven.containerUrl>
+        <cargo.server.start.timeout>240000</cargo.server.start.timeout>
       </properties>
+      <dependencies>
+        <!-- Payara bundles its own JSTL; mark as provided to avoid a
+             duplicate TLD URI registration when Jasper scans both the server
+             lib and WEB-INF/lib. -->
+        <dependency>
+          <groupId>jakarta.servlet.jsp.jstl</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+          <version>${jstl-api.version}</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+          <version>${jstl-impl.version}</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven3-plugin</artifactId>
-            <configuration>
-              <container>
-                <containerId>${cargo.maven.containerId}</containerId>
-                <type>installed</type>
-                <zipUrlInstaller>
-                  <url>${cargo.maven.containerUrl}</url>
-                </zipUrlInstaller>
-                <timeout>${cargo.startup.timeout}</timeout>
-              </container>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <!-- TODO: Remove after we switch to jakarta as end of life and no longer supported. -->
-      <id>resin4</id>
-      <properties>
-        <resin.major-version>4</resin.major-version>
-        <resin.version>4.0.67</resin.version>
-        <cargo.maven.containerId>resin${resin.major-version}x</cargo.maven.containerId>
-        <!-- Do not use https as the certificate is bad which prevents this from working! -->
-        <cargo.maven.containerUrl>http://caucho.com/download/resin-${resin.version}.zip</cargo.maven.containerUrl>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <configuration>
-              <packagingExcludes>WEB-INF/beans.xml</packagingExcludes>
-            </configuration>
-          </plugin>
           <plugin>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-maven3-plugin</artifactId>
@@ -519,14 +510,30 @@
     </profile>
 
     <profile>
-      <id>tomee8</id>
+      <id>tomee10</id>
       <properties>
-        <tomee.major-version>8</tomee.major-version>
-        <tomee.version>8.0.16</tomee.version>
+        <tomee.major-version>10</tomee.major-version>
+        <tomee.version>10.2.0</tomee.version>
         <cargo.maven.containerId>tomee${tomee.major-version}x</cargo.maven.containerId>
         <cargo.maven.containerUrl>https://repo1.maven.org/maven2/org/apache/tomee/apache-tomee/${tomee.version}/apache-tomee-${tomee.version}-plume.zip</cargo.maven.containerUrl>
-        <cargo.jvmargs>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</cargo.jvmargs>
       </properties>
+      <dependencies>
+        <!-- TomEE bundles its own JSTL; mark as provided to avoid a
+             duplicate TLD URI registration when Jasper scans both the server
+             lib and WEB-INF/lib. -->
+        <dependency>
+          <groupId>jakarta.servlet.jsp.jstl</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+          <version>3.0.0</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+          <version>3.0.1</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
@@ -547,13 +554,11 @@
     </profile>
 
     <profile>
-      <id>wildfly26</id>
+      <id>wildfly41</id>
       <properties>
-        <wildfly.major-version>26</wildfly.major-version>
-        <wildfly.version>26.1.3.Final</wildfly.version>
-        <cargo.maven.containerId>wildfly${wildfly.major-version}x</cargo.maven.containerId>
+        <wildfly.version>41.0.0.Final</wildfly.version>
+        <cargo.maven.containerId>wildfly41x</cargo.maven.containerId>
         <cargo.maven.containerUrl>https://github.com/wildfly/wildfly/releases/download/${wildfly.version}/wildfly-${wildfly.version}.zip</cargo.maven.containerUrl>
-        <cargo.jvmargs>--add-opens=java.base/java.util=ALL-UNNAMED</cargo.jvmargs>
       </properties>
       <build>
         <plugins>
